# fastapp

./: .env  README.md  fastapp.py  main.py  pyproject.toml
app/: +page.jinja
app/hello/: +page.jinja
app/hello/{name}/: +page.jinja  +page.py
templates/: base.jinja
