[project]
name = "fastapp"
version = "0.1.0"
description = "A FastAPI wrapper for creating fullstack web apps with SvelteKit-like file based routing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
